fix: fix upload variant image error
